--- a/style/custom.css
+++ b/style/custom.css
@@ -55,9 +55,50 @@ header{
 	-webkit-transform: rotate(30deg);
 }
 
+/* 'LOGIN' Page */
+
+#login{
+	display: block;
+	width: 600px;
+	height: 180px;
+}
+
+#enter-name{
+	width: 300px;
+	margin: 0px auto;
+	padding: 30px 0px;
+}
+
+#text-data{
+	padding: 5px;
+	margin: 10px 10px 0px 0px;
+	float: left;
+}
+
+#submit-text{
+	padding: 7px 10px;
+	margin: 10px 0px;
+	cursor: pointer;
+	background-color: #5791BB;
+	color: white;
+	font-size: 14px;
+	line-height: 14px;
+	font-weight: bold;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.32);
+	text-decoration: none;
+	-webkit-font-smoothing: antialiased;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	border: 1px solid #5791BB;
+	display: block;
+	float: left;
+	background: -webkit-linear-gradient(top,#6AA5CF 0,#5791BB 100%);
+}
+
 /* STARTING PAGE */
 
-#start, #stats, #exported{
+#login, #start, #stats, #exported{
 	background-color: white;
 	padding: 0px;
 	-webkit-border-radius: 6px;
@@ -67,7 +108,7 @@ header{
 }
 
 #start{
-	display: block;
+	display: none;
 	width: 600px;
 	min-height: 180px;
 	padding: 10px 0px;
@@ -105,6 +146,7 @@ header{
 }
 
 #user-rank .username{
+	font-size: 18px;
 	float: left;
 	clear: both;
 	margin: 0px;
