--- a/style/custom.css
+++ b/style/custom.css
@@ -99,8 +99,9 @@ header{
 #submit-text:hover, #submit-text:active{
 	position: relative;
 	top: 2px;
-	background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#3A996A),color-stop(100%,#277951));
+	background: -webkit-linear-gradient(top,#548EB8 0,#497CA2 100%);
 }
+
 
 /* STARTING PAGE */
 
